# nfetch

./: .gitignore  Makefile  README.md  boxnovel.py  bronovel.py  pyproject.toml
