[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
select = ["F", "E", "W", "C90", "I", "UP", "C4", "SIM", "ERA", "RUF"]

[tool.poetry]
name = "nfetch"
version = "0.1.0"
description = ""
authors = ["Jaghaimo <1764586+jaghaimo@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4"
requests = "^2"
rich = "^13"

[tool.poetry.group.dev.dependencies]
black = "^23"
ruff = "^0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
